# tricks

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deployment.yaml
search/: search_index.json
