[tool.poetry]
name = "tricks"
version = "0.1.0"
description = ""
authors = ["Téo Haÿs <teo@haysberg.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.42"
pygments = "^2.18.0"
mkdocs-material-extensions = "^1.3.1"
pymdown-extensions = "^10.11.2"
mkdocs-minify-plugin = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
