[project]
name = "tricks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.42",
    "mkdocs-minify-plugin>=0.8.0",
    "pygments>=2.18.0",
    "pymdown-extensions>=10.11.2",
    "ruff>=0.7.0",
]
